--- a/public/404.html
+++ b/public/404.html
@@ -62,14 +62,14 @@ body  {
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
+<body>
     <div class="card">
       <h3>Error 404</h3>
   </div> <div class="text">
   <p> The page you were looking for doesn't exist.</p>
   <p> You may have mistyped the address or the page may have moved.</p>
   <p> If you are the application owner check the logs for more information.</p>
-</div>
+  <p><form action="submit"><button class="btnfooter btn"  type="submit" formaction="https://www.paidfast.me">Go back to Paidfast</button></p>
+</form> </div>
 </body>
 </html>
