--- a/public/500.html
+++ b/public/500.html
@@ -59,17 +59,18 @@ body  {
   inset: 5px;
   border-radius: 15px;
 }
+
   </style>
 </head>
-
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
+<body>
   <div class="card">
     <h3>Error 500</h3>
   </div>
   <div class="text">
   <p> We're sorry, but something went wrong.</p>
   <p> If you are the application owner check the logs for more information.</p>
+ <p>  <form action="submit"><button class="btnfooter btn"  type="submit" formaction="https://www.paidfast.me">Go back to Paidfast</button></p>
+</form>
   </div>
 </body>
 </html>
